fixed a couple of bugs

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="sidebar">
         <h2>This is the Sidebar</h2>
           <!-- Part Two: Sidebar. Options, Controls, etc. -->
-            <button type="button" id="iterate-once"><b>ITERATE ONCE</b></button>
-            <button type="button" class="iteration" id="switch-iteration"><b>START ITERATING</b></button>
-            <button type="button" id="reset-iteration"><b>RESET ITERATIONS</b></button>
-            <button type="button" id="clear-field"><b>CLEAR FIELD</b></button>
+            <button type="button" id="iterate-once">ITERATE ONCE</button>
+            <button type="button" class="iteration" id="switch-iteration">START ITERATING</button>
+            <button type="button" id="reset-iteration">RESET ITERATIONS</button>
+            <button type="button" id="clear-field">CLEAR FIELD</button>
         </div>
 
         <div class="main">
